2006-11-22  Rodney Dawes  <dobey@novell.com>

	* scripts/banshee.py: Update to work with banshee 0.11.2 as well

2006-11-09  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py (a11y_find_panel_with_applet): Add a new
	method to search for a specific applet in all available panels, this
	probably breaks for multiple applets of the same type, but works great
	for single applet instances

	* scripts/applet-show-desktop.py:
	* scripts/applet-volume-control.py:
	Add two new scripts to attempt to poke at a couple applets

	* scripts/gnome-panel.py: Scan all the panels that might exist

2006-10-30  Rodney Dawes  <dobey@novell.com>

	* scripts/Makefile.am: Add gnome-main-menu.py

	* scripts/control-center.py: Clean up a little bit

	* scripts/gnome-background-properties.py: Use the new objectexist()
	call from LDTP CVS to push the right button to close the dialog

	* scripts/gnome-main-menu.py: New script to test the main menu applet
	from the slab module in GNOME cvs

	* scripts/gnome-panel.py: Make window_title more specific so that
	we can correctly poke the right widgets

2006-10-24  Rodney Dawes  <dobey@novell.com>

	* scripts/Makefile.am:
	* scripts/gnome-volume-properties.py: Add a script to scan the
	Removable Drives and Media Properties capplet

2006-10-24  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py (a11y_test_init): Add a third argument to
	specify whether or not to run the app, so that we can test apps which
	need to already be running, such as the panel or nautilus

	* scripts/Makefile.am: Update to include all the new scripts

	* scripts/gnome-panel.py: Add the beginnings of a script to test the
	gnome-panel accessibility

2006-09-28  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 2.15.1 for release

2006-09-28  Rodney Dawes  <dobey@novell.com>

	* scripts/Makefile.am: evolution.py replaces evolution-mail.py

2006-09-28  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Remove AM_MAINTAINER_MODE call