@@ -1,5 +1,9 @@
 2006-11-22  Rodney Dawes  <dobey@novell.com>
 
+	* scripts/gedit.py: Update to work with gedit 2.16.x
+
+2006-11-22  Rodney Dawes  <dobey@novell.com>
+
 	* scripts/banshee.py: Update to work with banshee 0.11.2 as well
 
 2006-11-09  Rodney Dawes  <dobey@novell.com>
